test/tests/stages/5_local_variables/valid/non_short_circuit_or.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  const int(0)
  ||
  (
  identifier(a)
  =
  const int(1)
  )
  ;
  return
  identifier(a)
  ;
  }
