test/tests/stages/5_local_variables/invalid_parse/malformed_not_equal.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(1)
  !
  =
  const int(0)
  ;
  }
